Implement image uploads

--- a/app/views/types/edit.html.erb
+++ b/app/views/types/edit.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <form action="/update_type/<%= @type.id %>" method="post">
+    <form action="/update_type/<%= @type.id %>" method="post" enctype="multipart/form-data">
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
@@ -51,7 +51,8 @@
           Picture
         </label>
 
-        <input type="text" id="picture" name="picture" placeholder="Picture" class="form-control" value="<%= @type.picture %>">
+        <%= cl_image_tag(@type.picture.to_s, :width => 90, :height => 90, :crop => :thumb) %>
+        <input type="file" id="picture" name="picture" class="form-control">
       </div>
 
       <button class="btn btn-warning">
