--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -15,7 +15,7 @@
       <dd><%= @type.list %></dd>
 
       <dt>Picture</dt>
-      <dd><%= @type.picture %></dd>
+      <dd><img src="<%= @type.picture %>" class="img-responsive"></dd>
 
     </dl>
 
