--- a/app/views/types/new.html.erb
+++ b/app/views/types/new.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <form action="/create_type" method="post">
+    <form action="/create_type" method="post" enctype="multipart/form-data">
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
@@ -51,7 +51,7 @@
           Picture
         </label>
 
-        <input type="text" id="picture" name="picture" placeholder="Picture" class="form-control" value="<%= @type.picture %>">
+        <input type="file" id="picture" name="picture" class="form-control">
       </div>
 
       <button class="btn btn-success">
